Updated the ServerResult.cs class. Added the Redslide.HttpLib library to the project, instead of the compiled dll to allow for some necessary changes. Added the Json.Net library. Updated the Testing project to include server list. Updated the BattleLib library to support querying servers.

--- a/Redslide.HttpLib/Redslide.HttpLib.csproj
+++ b/Redslide.HttpLib/Redslide.HttpLib.csproj
@@ -1,16 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{61DB91CA-F800-4819-A5F1-36E694E9A009}</ProjectGuid>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
+    <ProjectGuid>{733BB7C1-3F44-4F4F-B2A9-B5AF6B2EE859}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BattleLib</RootNamespace>
-    <AssemblyName>BattleLib</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>Redslide.HttpLib</RootNamespace>
+    <AssemblyName>Redslide.HttpLib</AssemblyName>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,12 +35,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="HtmlAgilityPack">
-      <HintPath>..\..\HtmlAgilityPack\Net40-client\HtmlAgilityPack.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\JSON.NET\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,25 +44,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BattleRequest.cs" />
-    <Compile Include="Expansion.cs" />
-    <Compile Include="ExtendedInfo.cs" />
-    <Compile Include="FreeSlots.cs" />
-    <Compile Include="GameLevel.cs" />
-    <Compile Include="GameMode.cs" />
-    <Compile Include="GamePreset.cs" />
-    <Compile Include="HttpRequestHelper.cs" />
-    <Compile Include="JsonHelper.cs" />
+    <Compile Include="HttpLib\NamedFileStream.cs" />
+    <Compile Include="HttpLib\Request.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Region.cs" />
-    <Compile Include="ServerFilter.cs" />
-    <Compile Include="ServerResult.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Redslide.HttpLib\Redslide.HttpLib.csproj">
-      <Project>{733bb7c1-3f44-4f4f-b2a9-b5af6b2ee859}</Project>
-      <Name>Redslide.HttpLib</Name>
-    </ProjectReference>
+    <Compile Include="Utils\Utils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
